Finish static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+  <h1>Help</h1>
+  <p>
+    You can try to get help!
+    <a href="https://sheltered-sands-39553.herokuapp.com/">But there will be no</a>
+  </p>
