--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+  <h1>sample App</h1>
+  <p>
+    This is the home page of the
+    <a href="https://sheltered-sands-39553.herokuapp.com/">Schebetalka</a>
+    <p>
+    <a href="/static_pages/about">About</a></p>
+  </p>
