Добалена регистрация пользователя, закончены руты

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
-  <h1>About</h1>
-  <p>Something interesting
-  <a href="https://sheltered-sands-39553.herokuapp.com/">ABOUT</a> will be later</p>
+<% provide(:title, 'Информация') %>
+<div class="center jumbotron">
+  <h1>Информация информация информация</h1>
+  <p>Куча всего интересного
+  <a href="https://sheltered-sands-39553.herokuapp.com/">Что-то о</a> моей красоте</p>
+</div>
