--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,7 @@
-  <h1>Contact</h1>
+<% provide(:title, 'Контакты') %>
+<div class="center jumbotron">
+  <h1>Контакты</h1>
   <p>
-    Our contacts should be here
+    Куда писать, кому жаловаться?
   </p>
+</div>
