--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,8 @@
-  <h1>Help</h1>
+<% provide(:title, 'Помощь') %>
+<div class="center jumbotron">
+  <h1>Помощь</h1>
   <p>
-    You can try to get help!
-    <a href="https://sheltered-sands-39553.herokuapp.com/">But there will be no</a>
+    Спасение в руках утопающего
+    <a href="https://sheltered-sands-39553.herokuapp.com/"> бубь</a>
   </p>
+</div>
