--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,29 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta charset="utf-8">
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %>
   </head>
 
   <body>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <%= render 'layouts/header' %>
+      <div class="container">
+        <%= link_to "Пробное приложение", '#', id: 'logo' %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Главная", '#' %></li>
+            <li><%= link_to "Помощь", '#' %></li>
+            <li><%= link_to "Войти", '#' %></li>
+          </ul>
+        </nav>
+      </div>
+
+    </header>
+    <div class="container">
     <%= yield %>
+    <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
