--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,12 @@
-  <h1>sample App</h1>
-  <p>
-    This is the home page of the
-    <a href="https://sheltered-sands-39553.herokuapp.com/">Schebetalka</a>
-    <p>
-    <a href="/static_pages/about">About</a></p>
-  </p>
+<div class="center jumbotron">
+  <h1>Добро пожаловать в пробное приложение</h1>
+
+  <h2>Это домашняя страница
+    <a href="https://sheltered-sands-39553.herokuapp.com/">Болталки</a> как пробного приложения
+  </h2>
+  <%= link_to "Зарегистрируйся!", signup_path, class: "btn btn-lg btn-primary" %>
+
+</div>
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+"https://rubyonrails.org/" %>
+<%= link_to image_tag("kitten.jpg", alt: "kitten", width: "400") %>
