--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,20 @@
 <% provide(:title, 'Регистрация') %>
 <div class="center jumbotron">
 <h1>Зарегистрируйся</h1>
-<p>Тут будет страничка регистрации пользователей</p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with(model: @user, local: true) do |f| %>
+      <%= render 'shared/error_messages' %>
+      <%= f.label :name, "Имя", class: 'form-control' %>
+      <%= f.text_field :name %>
+      <%= f.label :email, "Электронная почта", class: 'form-control' %>
+      <%= f.email_field :email %>
+      <%= f.label :password, "Пароль", class: 'form-control' %>
+      <%= f.password_field :password %>
+      <%= f.label :password_confirmation, "Повтор пароля", class: 'form-control' %>
+      <%= f.password_field :password_confirmation %>
+      <%= f.submit "Подтверждаю создание аккаунта", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 </div>
