--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -40,7 +40,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
-  margin-bottom: 30px;
+  margin-top: 70px;
+  margin-bottom: 50px;
   text-allign: center;
 }
 
@@ -101,6 +102,23 @@ footer {
     }
   }
 }
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
 
 
 img {
@@ -121,7 +139,7 @@ img {
 
 aside {
   section.user_info {
-    margin-top: 20px;
+    margin-top: 40px;
   }
   section {
     padding: 10px 0;
@@ -136,21 +154,26 @@ aside {
       line-height: 1;
     }
     h1 {
-      font-size: 1.4em;
+      font-size: 2em;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
-      margin-top: 0px;
+      margin-top: 40px;
     }
   }
 }
 
+.alert {
+  padding: 90px;
+}
+
 .gravatar {
+  margin-top: 40 px;
   float: left;
   margin-right: 10px;
 }
 .gravatar_edit {
-  margin-top: 15px;
+  margin-top: 60px;
 }
 
 /* forms */
