--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,39 @@
   <div class="container">
     <%= link_to "Пробное приложение", root_path, id: 'logo' %>
     <nav>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed"
+          data-toggle="collapse"
+          data-target="#bs-example-navbar-collapse-1"
+          aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
+          id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Главная", root_path %></li>
         <li><%= link_to "Помощь", help_path %></li>
-        <li><%= link_to "Войти", '#' %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Пользователи", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Аккаунт <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Профиль", current_user %></li>
+              <li><%= link_to "Настройки", '#' %></li>
+              <li> <class="divider"></li>
+              <li>
+                <%= link_to "Выход", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+          <% else %>
+          <li><%= link_to "Войти", login_path  %></li>
+          <% end %>
       </ul>
     </nav>
   </div>
