--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Регистрация') %>
-<div class="center jumbotron">
+<div class="center">
 <h1>Зарегистрируйся</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
