--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, @user.name) %>
-<div class="center jumbotron">
+<div class="center">
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-auto">
     <section class="user_info">
       <h1>
         <%= gravatar_for @user %>
